거래내역 경매 리스트 추가, 응찰하기 페이지 작가 다른 작품 추가

--- a/src/main/resources/templates/thymeleaf/fo/artistLibrary/artistDetail.html
+++ b/src/main/resources/templates/thymeleaf/fo/artistLibrary/artistDetail.html
@@ -614,7 +614,7 @@ $(function() {
 });
 
 function workDetail(workSq){
-	location.href="/openBidding?workSq="+workSq;
+	location.href="/bidding?workSq="+workSq;
 }
 
 $(document).on("click", ".heart", function(){
