--- a/src/main/resources/templates/thymeleaf/header.html
+++ b/src/main/resources/templates/thymeleaf/header.html
@@ -790,7 +790,7 @@ var workSq = "";
 var loginBf = document.getElementById("loginBf");
 var loginAf = document.getElementById("loginAf");
 //Session GET
-jQuery(document).ready(function() {
+/* jQuery(document).ready(function() {
 	$.ajax({
         type: "post",
         url: "/loginSession",
@@ -819,7 +819,7 @@ jQuery(document).ready(function() {
             alert("오류 발생" + error);
         }
 	})
-});
+}); */
 
 //로그인 기능
 function login(){
