--- a/src/main/resources/templates/thymeleaf/myPageLeft.html
+++ b/src/main/resources/templates/thymeleaf/myPageLeft.html
@@ -81,11 +81,11 @@
 		</div>
 	</div>
 <script th:inline="javascript">
-$(function() {
+/* $(function() {
 	if(sMbrSqVal == null || sMbrSqVal == ""){
 		modalAlertShow("잘못된 접근입니다. 메인페이지로 이동합니다.", "main");
 	}
-});
+}); */
 $(document).on("click", ".myWork", function(){
 	pageGoPost({
 		url:"/myWork",
