--- a/src/main/resources/templates/thymeleaf/fo/mgz/media.html
+++ b/src/main/resources/templates/thymeleaf/fo/mgz/media.html
@@ -31,57 +31,7 @@
 							</ul>
 						</div>
 						
-						<ul class="mgz-list">
-							<li>
-								<a href="#" class="mgz-youtube">
-									<div class="ml-img"  data-toggle="modal" data-target="#mediaModal"><img src="resources/img/mgz/list-bg1.png" /></div>
-									<div class="ml-div">
-										<h3 class="ml-h3">[ENG SUB] Portrait of an Artist <br/>| 육준서 작가 (Junseo…)</h3>
-										<div class="ml-p">
-											Riveruns Official
-										</div>
-										<span class="ml-time">2022.03.03</span>
-									</div>
-								</a>
-							</li>
-							<li>
-								<a href="#" class="mgz-youtube">
-									<div class="ml-img"><img src="resources/img/mgz/list-bg1.png" /></div>
-									<div class="ml-div">
-										<h3 class="ml-h3">[ENG SUB] Portrait of an Artist <br/>| 육준서 작가 (Junseo…)</h3>
-										<div class="ml-p">
-											Riveruns Official
-										</div>
-										<span class="ml-time">2022.03.03</span>
-									</div>
-								</a>
-							</li>
-							<li>
-								<a href="#" class="mgz-youtube">
-									<div class="ml-img"><img src="resources/img/mgz/list-bg1.png" /></div>
-									<div class="ml-div">
-										<h3 class="ml-h3">[ENG SUB] Portrait of an Artist <br/>| 육준서 작가 (Junseo…)</h3>
-										<div class="ml-p">
-											Riveruns Official
-										</div>
-										<span class="ml-time">2022.03.03</span>
-									</div>
-								</a>
-							</li>
-							<li>
-								<a href="#" class="mgz-youtube">
-									<div class="ml-img"><img src="resources/img/mgz/list-bg1.png" /></div>
-									<div class="ml-div">
-										<h3 class="ml-h3">[ENG SUB] Portrait of an Artist <br/>| 육준서 작가 (Junseo…)</h3>
-										<div class="ml-p">
-											Riveruns Official
-										</div>
-										<span class="ml-time">2022.03.03</span>
-									</div>
-								</a>
-							</li>
-							
-						</ul>
+						<ul class="mgz-list" id="mgz9List"></ul>
 						
 						
 						<div class="text-center">
@@ -98,7 +48,7 @@
 	</div>
 
 
-<div class="modal fade modal-s" id="mediaModal" tabindex="-1" role="dialog" aria-labelledby="mediaModalLabel" aria-hidden="true">
+<div class="modal fade modal-s" id="lp_mgz9Dtl" tabindex="-1" role="dialog" aria-labelledby="mediaModalLabel" aria-hidden="true">
 	<div class="modal-dialog modal-youtube">
 		<div class="modal-content">
 			<div class="modal-header">
@@ -106,9 +56,7 @@
 				    <div data-dismiss="modal" aria-label="Close"><img src="resources/img/ba/icon-end.png"></div>
 				</div>
 			</div>
-			<div class="modal-body">
-				<iframe width="560" height="315" style="width:100% !important;; height:40rem !important;;" src="https://www.youtube.com/embed/szDYnZbJ44Y" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-			</div>
+			<div class="modal-body" id="lp_mgz9Dtl_cntnt"></div>
 		</div>
 	</div>
 </div>
@@ -206,6 +154,8 @@
 	function(){ $(this).addClass('gis') },
     function(){ $(this).removeClass('gis') }
   )
+  
+  selectMgz9List("MDA");
  });
  
  $(function() {                      
@@ -273,6 +223,91 @@
 });
  
  $('.selectpicker').selectpicker();
+ 
+/*
+ * MGZ9 목록 조회
+ * PARAM : 
+	#MGZ_TYP_CD
+		IST - INSIGHTS
+		MDA - MEDIA
+		EBI - EXHIBITION
+ * RETURN : MGZ9 목록
+ */
+ function selectMgz9List(mgzTypCd){
+ 	
+ 	$.ajax({
+         type: "post",
+         url: "/selectMgz9List",
+         data:{
+        	 mgzTypCd : mgzTypCd
+ 		},
+         success: function(data) {
+         	var mgz9List = null;
+         	var mgz9ListHtml = "";
+         	
+         	if(data.result != null && data.result.length > 0){
+         		mgz9List = data.result;	
+         		console.log(data);
+         		
+         		for(var i=0; i<mgz9List.length; i++){
+         			mgz9ListHtml += '<li>';
+	         		mgz9ListHtml += '	<a href="" class="mgz-youtube" data-toggle="modal" data-target="#lp_mgz9Dtl" onclick="selectMgz9Dtl('+ mgz9List[i].mgzSq +');">';
+	         		mgz9ListHtml += '		<div class="ml-img"><img src="'+ mgz9List[i].mgzMainImgUrl +'" /></div>';
+	         		mgz9ListHtml += '		<div class="ml-div">';
+	         		mgz9ListHtml += '			<h3 class="ml-h3">'+ mgz9List[i].mgzTitle +'</h3>';
+	         		mgz9ListHtml += '			<div class="ml-p">';
+	         		mgz9ListHtml += '				'+ mgz9List[i].mgzDescrptn +'';
+	         		mgz9ListHtml += '			</div>';
+	         		mgz9ListHtml += '			<span class="ml-time">'+ mgz9List[i].regDate +'</span>';
+	         		mgz9ListHtml += '		</div>';
+	         		mgz9ListHtml += '	</a>';
+	         		mgz9ListHtml += '</li>';
+             	}
+         		
+             	$("#mgz9List").empty();
+             	$("#mgz9List").append(mgz9ListHtml).trigger("create");
+         	}else{
+         		modalAlertShow("검색 결과가 없습니다."); 
+         		$("#mgz9List").empty();
+         	}
+         },           
+         error: function(error) {
+             alert("오류 발생" + error);
+         }
+ 	});
+ }
+ 
+ 
+ /*
+  * MGZ9 상세 조회
+  * PARAM : #MGZ_SQ
+  * RETURN : MGZ9 상세
+  */
+  function selectMgz9Dtl(mgzSq){
+  	
+  	$.ajax({
+          type: "post",
+          url: "/selectMgz9Dtl",
+          data:{
+         	 mgzSq : mgzSq
+  		},
+          success: function(data) {
+          	var mgzDtl = null;
+          	console.log(data);
+          	
+          	if(data.result != null){
+            	$("#lp_mgz9Dtl_cntnt").empty();
+            	$("#lp_mgz9Dtl_cntnt").append(data.result.mgzContent).trigger("create");
+        	}else{
+        		modalAlertShow("검색 결과가 없습니다."); 
+        		$("#lp_mgz9Dtl_cntnt").empty();
+        	}
+          },           
+          error: function(error) {
+              alert("오류 발생" + error);
+          }
+  	});
+  }
       
 </script>
 	
